--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=4000
-DB_CNN=mongodb+srv://mern_user:2Yv18x0MCnElEZE9@cluster0.jhqdn.mongodb.net/mern_calendar
+DB_CNN=mongodb+srv://mern_user:I1xjLlOitKvvC4v0@cluster0.wqoyr.mongodb.net/mern_calendar
 SECRET_JWT_SEED=Esto-Es-Una-Palabr@_SecretA_mama_helpMe!
